# mcp-jsonrpc

./: Cargo.toml  LICENSE  README.md
.github/prompts/: development-loop.prompt.md  hexagonal.prompt.md  mcp-jsonrpc-implementation-guide.prompt.md  project-big-picture.prompt.md  unittests.prompt.md
src/: conversion.rs  error.rs  lib.rs  processor.rs  protocol.rs
src/transport/: base.rs  mod.rs  tcp.rs  unix.rs
