[package]
name = "mcp-jsonrpc"
version = "0.1.0"
edition = "2021"
description = "JSON-RPC 2.0 adapter for the MCP Core system"
license = "MIT"
repository = "https://github.com/MCPStudio/mcp-jsonrpc"

[dependencies]
# Core domain dependency
mcp-core = { path = "../mcp-core", version = "0.1" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async support
async-trait = "0.1"
tokio = { version = "1.25", features = ["full"] }

# Error handling
thiserror = "1.0"
mcp-error = { git = "https://github.com/MCPStudio/mcp-error" }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.2"
futures = "0.3"
